--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -8,42 +7,43 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
-        div h2{
-            display: flex;
+        div h2 {
+            display: block;
             margin: 0 auto;
         }
-.full-table {
-  border-collapse: collapse;
-  margin-bottom: 30px;
-  font-size: large;
-  font-family: Georgia;
-  background: #f5f5f5;
-  border: 2px solid #ddd;
-}
 
-.full-table th,
-.full-table td {
-  padding: 10px;
-  text-align: center;
-  border: 1px solid #ddd;
-}
+        .full-table {
+            border-collapse: collapse;
+            margin-bottom: 30px;
+            font-size: large;
+            font-family: Georgia;
+            background: #f5f5f5;
+            border: 2px solid #ddd;
+        }
 
-.full-table th {
-  background-color: #333333;
-  color: #fff;
-}
+        .full-table th,
+        .full-table td {
+            padding: 10px;
+            text-align: center;
+            border: 1px solid #ddd;
+        }
 
-.full-table tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-</style>
+        .full-table th {
+            background-color: #333333;
+            color: #fff;
+        }
+
+        .full-table tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 
 <body>
 
-    <div style="padding:16px">
+    <div>
         <h2>Filtered Ship Wreck Data</h2>
-        
+
     </div>
 
     {{{body}}}
