--- a/views/singleShipWreck.hbs
+++ b/views/singleShipWreck.hbs
@@ -1,5 +1,3 @@
-
-
 {{!-- {{#if equals pageCount 0}} style="background-color: red;"
 {{/if}} --}}
 
@@ -27,7 +25,7 @@
     <tr>
         <th style="padding: 20px; width: 10%;">chart</th>
         <td style="text-align: center; padding: 20px;">
-            {{  this.chart }} </td>
+            {{ this.chart }} </td>
     </tr>
     <tr>
         <th style="padding: 20px; width: 10%;">londec</th>
@@ -42,7 +40,7 @@
     </tr>
     <tr>
         <th style="padding: 20px; width: 10%;">gp_quality</th>
-        <td style="text-align: justify; padding: 20px;">
+        <td style="text-align: center; padding: 20px;">
             {{ this.gp_quality }} </td>
     </tr>
     <tr>
@@ -77,4 +75,4 @@
     </tr>
 
 </table>
-    {{/each}}
+{{/each}}
